--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <script src="Grid.js"></script>
 <script src="Cell.js"></script>
+<script src="BorderCell.js"></script>
+<script src="PathCell.js"></script>
+<script src="Thread.js"></script>
 <style>
 canvas {
     border:1px solid #d3d3d3;
@@ -15,10 +18,13 @@ canvas {
 <script>
 
 var myGamePiece;
+cellSize = 25;
 
 function startGame() {
     myGameArea.start();
-    gameGrid = new Grid(25, 25, "white", "black", 10, 120);
+    gameGrid = new Grid(cellSize, cellSize, "white", "black", 10, 120);
+    gameGrid.createCellLinks();
+    threadPool = [];
 }
 
 var myGameArea = {
@@ -49,6 +55,8 @@ function updateGameArea()
 {
   myGameArea.clear();
   gameGrid.draw();
+  createThreads();
+  updateThreads();
 
 }
 
@@ -56,7 +64,30 @@ function click()
 {
   var rect = myGameArea.canvas.getBoundingClientRect();
   var clicked = gameGrid.getSquare(myGameArea.x - rect.left, myGameArea.y - rect.top);
-  gameGrid.fill(clicked);
+  gameGrid.fill(clicked[0], clicked[1]);
+}
+
+function createThreads()
+{
+  var emptyBorderCells = gameGrid.getActiveBorders();
+  emptyBorderCells.forEach(function(emptyBorderCell)
+  {
+    if(emptyBorderCell.readyThreads > 0)
+    {
+      var newThread = new Thread(emptyBorderCell.x, emptyBorderCell.y, emptyBorderCell.x, emptyBorderCell.y);
+      threadPool.push(newThread);
+      emptyBorderCell.readyThreads -= 1;
+    }
+  });
+}
+
+function updateThreads()
+{
+  threadPool.forEach(function(thread)
+  {
+    thread.update();
+    thread.draw();
+  })
 }
 
 </script>
