--- a/index.html
+++ b/index.html
@@ -35,14 +35,26 @@ var myGameArea = {
         this.context = this.canvas.getContext("2d");
         document.body.insertBefore(this.canvas, document.body.childNodes[0]);
         this.interval = setInterval(updateGameArea, 30);
+        this.key_W = false;
+        this.key_A = false;
+        this.key_S = false;
+        this.key_D = false;
         window.addEventListener('mousedown', function (e) {
             myGameArea.x = e.pageX;
             myGameArea.y = e.pageY;
         })
         window.addEventListener('mouseup', function (e) {
           click();
-            myGameArea.x = false;
-            myGameArea.y = false;
+          myGameArea.x = false;
+          myGameArea.y = false;
+        })
+        window.addEventListener('keydown', function (e)
+        {
+          setKeys(e);
+        })
+        window.addEventListener('keyup', function (e)
+        {
+          unsetKeys(e);
         })
     },
     clear : function()
@@ -88,6 +100,46 @@ function updateThreads()
     thread.update();
     thread.draw();
   })
+}
+
+function setKeys(event)
+{
+  if(event.keyCode == 87)
+  {
+    myGameArea.key_W = true;
+  }
+  if(event.keyCode == 65)
+  {
+    myGameArea.key_A = true;
+  }
+  if(event.keyCode == 83)
+  {
+    myGameArea.key_S = true;
+  }
+  if(event.keyCode == 68)
+  {
+    myGameArea.key_D = true;
+  }
+}
+
+function unsetKeys(event)
+{
+  if(event.keyCode == 87)
+  {
+    myGameArea.key_W = false;
+  }
+  if(event.keyCode == 65)
+  {
+    myGameArea.key_A = false;
+  }
+  if(event.keyCode == 83)
+  {
+    myGameArea.key_S = false;
+  }
+  if(event.keyCode == 68)
+  {
+    myGameArea.key_D = false;
+  }
 }
 
 </script>
