--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="ResultCell.js"></script>
 <script src="BlockCell.js"></script>
 <script src="CopyCell.js"></script>
+<script src="KillCell.js"></script>
 <style>
 canvas {
     border:1px solid #d3d3d3;
@@ -57,6 +58,7 @@ var myGameArea = {
         this.key_R = false;
         this.key_B = false;
         this.key_C = false;
+        this.key_K = false;
         this.lastDraggedCell = null;
 
 
@@ -190,6 +192,10 @@ function setKeys(event)
   {
     myGameArea.key_C = true;
   }
+  if(event.keyCode == 75)
+  {
+    myGameArea.key_K = true;
+  }
 }
 
 function unsetKeys(event)
@@ -233,6 +239,10 @@ function unsetKeys(event)
   if(event.keyCode == 67)
   {
     myGameArea.key_C = false;
+  }
+  if(event.keyCode == 75)
+  {
+    myGameArea.key_K = false;
   }
   
 
