--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="BlockCell.js"></script>
 <script src="CopyCell.js"></script>
 <script src="KillCell.js"></script>
+<script src="SyncCell.js"></script>
 <style>
 canvas {
     border:1px solid #d3d3d3;
@@ -59,6 +60,7 @@ var myGameArea = {
         this.key_B = false;
         this.key_C = false;
         this.key_K = false;
+        this.key_H = false;
         this.lastDraggedCell = null;
 
 
@@ -196,6 +198,10 @@ function setKeys(event)
   {
     myGameArea.key_K = true;
   }
+  if(event.keyCode == 72)
+  {
+    myGameArea.key_H = true;
+  }
 }
 
 function unsetKeys(event)
@@ -243,6 +249,10 @@ function unsetKeys(event)
   if(event.keyCode == 75)
   {
     myGameArea.key_K = false;
+  }
+  if(event.keyCode == 72)
+  {
+    myGameArea.key_H = false;
   }
   
 
