--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ function startGame() {
     loadImages();
     myGameArea.start();
     gameGrid = new Grid(cellSize, cellSize, "white", "black", 10, 120);
-    gameGrid.createCellLinks();
     threadPool = [];
 
 }
@@ -351,7 +350,12 @@ function unsetKeys(event)
 
 function loadLevel(button)
 {
-  console.log(button.value);
+  gameGrid.loadLevel(button.value);
+}
+
+function saveLevel()
+{
+  gameGrid.saveLevel(1);
 }
 
 function loadImages()
@@ -368,11 +372,11 @@ function loadImages()
   image_left.src = "images/left.png";
 }
 
-function setCookie(cname, cvalue, exdays) {
+function setCookie(cname,cvalue,exdays) {
     var d = new Date();
     d.setTime(d.getTime() + (exdays*24*60*60*1000));
-    var expires = "expires="+d.toUTCString();
-    document.cookie = cname + "=" + cvalue + "; " + expires;
+    var expires = "expires=" + d.toGMTString();
+    document.cookie = cname+"="+cvalue+"; "+expires;
 }
 
 function getCookie(cname) {
@@ -381,15 +385,14 @@ function getCookie(cname) {
     for(var i=0; i<ca.length; i++) {
         var c = ca[i];
         while (c.charAt(0)==' ') c = c.substring(1);
-        if (c.indexOf(name) == 0) return c.substring(name.length,c.length);
+        if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+        }
     }
     return "";
 }
 
-function saveLevel()
-{
-  gameGrid.saveLevel(1);
-}
+
 
 </script>
 <br>
